--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -131,4 +131,17 @@ h2 .symbol {
 
 }
 
+.chart-time-interval-button {
+    font-size: 90%;
+    padding: 2px 4px;
+    margin-bottom: 6px;
+}
+
+.selected-chart-time-interval {
+    border-style: solid;
+    border-width: 3px;
+    border-color: #FF6600; 
+}
+
+
 
