--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -85,7 +85,7 @@ body {
   color: white;
 }
 
-.btn-custom:hover, .btn-custom:target {
+.btn-custom:hover, .btn-custom:active {
   background-color: #53C781;
   color: white;
 }
@@ -94,7 +94,7 @@ body {
   color: #53B981;
 }
 
-.a-custom:hover, .a-custom:target {
+.a-custom:hover, .a-custom:active, .a-custom:link, .a-custom:visited {
   color: #53C781;
   text-decoration: none;
 }
